Fix scrollbar display

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ body {
     background-color: var(--background-dark);
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .App {
     width: 100%;
     height: 100%;
@@ -35,13 +39,7 @@ body {
 }
 
 .App::-webkit-scrollbar {
-    width: 10px;
     display: none;
-}
-
-.App::-webkit-scrollbar-thumb {
-    background-color: var(--shadow-dark);
-    border-radius: 5px;
 }
 
 .input-form {
